--- a/pom.xml
+++ b/pom.xml
@@ -26,20 +26,35 @@
             <version>1.14</version>
         </dependency>
         <dependency>
-            <groupId>org.apache.lucene</groupId>
-            <artifactId>lucene-core</artifactId>
-            <version>9.7.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.lucene</groupId>
-            <artifactId>lucene-queryparser</artifactId>
-            <version>9.7.0</version>
-        </dependency>
-        <dependency>
             <groupId>org.apache.maven.plugin-tools</groupId>
             <artifactId>maven-plugin-annotations</artifactId>
             <version>3.1</version>
         </dependency>
+        <dependency>
+            <groupId>groupId</groupId>
+            <artifactId>Popescu_Luca_Project1</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.lucene</groupId>
+            <artifactId>lucene-core</artifactId>
+            <version>9.8.0</version>
+            <scope>system</scope>
+            <systemPath>D:/OneDrive/Desktop/lucene-9.8.0/lucene-9.8.0/modules/lucene-core-9.8.0.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.lucene</groupId>
+            <artifactId>lucene-analyzers-common</artifactId>
+            <version>9.8.0</version>
+            <scope>system</scope>
+            <systemPath>D:/OneDrive/Desktop/lucene-9.8.0/lucene-9.8.0/modules/lucene-analysis-common-9.8.0.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.lucene</groupId>
+            <artifactId>lucene-queryparser</artifactId>
+            <version>9.8.0</version>
+            <scope>system</scope>
+            <systemPath>D:/OneDrive/Desktop/lucene-9.8.0/lucene-9.8.0/modules/lucene-queryparser-9.8.0.jar</systemPath>
+        </dependency>
     </dependencies>
-
 </project>
