--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,11 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
+            <groupId>com.ibm.icu</groupId>
+            <artifactId>icu4j</artifactId>
+            <version>71.1</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.lucene</groupId>
             <artifactId>lucene-core</artifactId>
             <version>9.8.0</version>
@@ -55,6 +60,11 @@
             <version>9.8.0</version>
             <scope>system</scope>
             <systemPath>D:/OneDrive/Desktop/lucene-9.8.0/lucene-9.8.0/modules/lucene-queryparser-9.8.0.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.12.0</version>
         </dependency>
     </dependencies>
 </project>
